# sdet_bootcamp

./: .day73-published-case-study.json  .day77-community-touchpoint-plan.json  .day85-release-prioritization-plan.json  .editorconfig  .gitignore  .gitlab-ci.day66-advanced-reference.yml  .gitleaks.toml  .gitleaksignore  .jenkins.day67-advanced-reference.Jenkinsfile  .pre-commit-config.yaml  .tekton.day68-self-hosted-reference.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  Makefile  QUALITY_PLAYBOOK.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  ci.sh  mkdocs.yml  mypy.ini  noxfile.py  premium-gate.sh  pyproject.toml  quality.sh  requirements-test.txt  requirements.txt  security.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codeql-config.yml  dependabot.yml  pull_request_template.md
.sdetkit/: gate.fast.snapshot.json
docs/: adoption-examples.md  adoption-troubleshooting.md  adoption.md  agentos-cookbook.md  agentos-foundation.md  api.md  automation-os.md  automation-templates-engine.md  before-after-evidence-example.md  blank-repo-to-value-60-seconds.md  changelog.md  choose-your-path.md  ci-artifact-walkthrough.md  ci-contract.md  cli.md  command-hud-live.md  command-surface.md  command-taxonomy.md  continuous-upgrade-cycle10-big-upgrade-report.md  continuous-upgrade-cycle11-big-upgrade-report.md  continuous-upgrade-cycle8-big-upgrade-report.md  continuous-upgrade-cycle9-big-upgrade-report.md  contributing.md  day-1-ultra-upgrade-report.md  day-11-ultra-upgrade-report.md  day-12-ultra-upgrade-report.md  day-14-ultra-upgrade-report.md  day-15-ultra-upgrade-report.md  day-17-ultra-upgrade-report.md  day-19-ultra-upgrade-report.md  day-2-ultra-upgrade-report.md  day-20-ultra-upgrade-report.md  day-21-ultra-upgrade-report.md  day-22-ultra-upgrade-report.md  day-23-ultra-upgrade-report.md  day-24-ultra-upgrade-report.md  day-25-ultra-upgrade-report.md  day-26-ultra-upgrade-report.md  day-27-ultra-upgrade-report.md  day-3-ultra-upgrade-report.md  (+232 more)
plans/: continuous-upgrade-cycle10-plan.json  continuous-upgrade-cycle11-plan.json  continuous-upgrade-cycle8-plan.json  continuous-upgrade-cycle9-plan.json  day70-triage-speed-case-study.json  day71-escalation-quality-case-study.json  day72-publication-quality-case-study.json  day74-distribution-scaling-plan.json  day76-contributor-recognition-plan.json  day77-community-touchpoint-plan.json  day79-scale-upgrade-plan.json  day80-partner-outreach-plan.json  day82-integration-feedback-plan.json  day83-trust-faq-expansion-plan.json  day86-launch-readiness-plan.json  day88-governance-priorities-plan.json  day90-phase3-wrap-publication-plan.json  day92-continuous-upgrade-cycle2-plan.json  day93-continuous-upgrade-cycle3-plan.json  day94-continuous-upgrade-cycle4-plan.json  day95-continuous-upgrade-cycle5-plan.json  day96-continuous-upgrade-cycle6-plan.json  day97-continuous-upgrade-cycle7-plan.json
scripts/: bootstrap.sh  check.sh  check_community_standards.py  check_continuous_upgrade_cycle10_closeout_contract.py  check_continuous_upgrade_cycle11_closeout_contract.py  check_continuous_upgrade_cycle8_closeout_contract.py  check_continuous_upgrade_cycle9_closeout_contract.py  check_day10_first_contribution_contract.py  check_day11_docs_navigation_contract.py  check_day12_startup_use_case_contract.py  check_day13_enterprise_use_case_contract.py  check_day14_weekly_review_contract.py  check_day15_github_actions_quickstart_contract.py  check_day16_gitlab_ci_quickstart_contract.py  check_day17_quality_contribution_delta_contract.py  check_day18_reliability_evidence_pack_contract.py  check_day19_release_readiness_board_contract.py  check_day20_release_narrative_contract.py  check_day21_weekly_review_contract.py  check_day22_trust_signal_upgrade_contract.py  check_day23_faq_objections_contract.py  check_day24_onboarding_time_upgrade_contract.py  check_day25_community_activation_contract.py  check_day26_external_contribution_push_contract.py  check_day27_kpi_audit_contract.py  check_day29_phase1_hardening_contract.py  check_day30_phase1_wrap_contract.py  check_day31_phase2_kickoff_contract.py  check_day32_release_cadence_contract.py  check_day33_demo_asset_contract.py  check_day34_demo_asset2_contract.py  check_day35_kpi_instrumentation_contract.py  check_day36_distribution_closeout_contract.py  check_day37_experiment_lane_contract.py  check_day38_distribution_batch_contract.py  check_day39_playbook_post_contract.py  check_day3_proof_contract.py  check_day40_scale_lane_contract.py  check_day41_expansion_automation_contract.py  check_day42_optimization_closeout_contract.py  (+71 more)
src/: tomllib.py
templates/: ci
tests/: conftest.py  test_acceleration_closeout.py  test_agent_actions_extra.py  test_agent_cli_ux.py  test_agent_core_extra.py  test_agent_dashboard_escaping.py  test_agent_foundation.py  test_agent_omnichannel_extra.py  test_agent_productization.py  test_agent_providers_extra.py  test_agent_templates_cli.py  test_agent_templates_engine.py  test_apiclient_async_timeout.py  test_apiclient_branches_extra.py  test_apiclient_branches_wave7.py  test_apiclient_retry_helpers_extra.py  test_apiclient_timeout.py  test_apiget_at_file.py  test_apiget_auth_dump_headers.py  test_apiget_envelope_pagination.py  test_apiget_fail_flags.py  test_apiget_query_header_stdin.py  test_apiget_raw_path_corner_cases.py  test_apiget_request_builder.py  test_apiget_verbose_debug.py  test_atomicio_bytes_branches_wave1.py  test_baseline_umbrella.py  test_bootstrap_idempotency.py  test_case_snippet_closeout.py  test_case_study_launch_closeout.py  test_case_study_prep1_closeout.py  test_case_study_prep2_closeout.py  test_case_study_prep3_closeout.py  test_case_study_prep4_closeout.py  test_cassette.py  test_cassette_branches_extra.py  test_ci_sh_contract_gate_fast.py  test_ci_templates_bootstrap.py  test_ci_validate_templates.py  test_cli_apiget_cassette.py  (+278 more)
tools/: devS69.sh  devS69_watch.py  patch_harness.py  post_checks.sh  post_checks_fast.sh  render_public_surface_contract_table.py  security.baseline.json  triage.py  (+1 more)
(+736 files in other folders)
