[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdetkit"
version = "0.2.8"
requires-python = ">=3.11"
readme = "README.md"
description = "Developer productivity and QA automation toolkit: CLI utilities, quality gates, and testable modules."
license = { file = "LICENSE" }
keywords = ["sdet", "testing", "qa", "automation", "cli", "devtools", "quality-gates"]
authors = [{ name = "DevS69 contributors" }]
maintainers = [{ name = "DevS69 maintainers" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities",
]
dependencies = [
  "httpx>=0.27,<1"
]


[project.urls]
Homepage = "https://github.com/sherif69-sa/DevS69-sdetkit"
Repository = "https://github.com/sherif69-sa/DevS69-sdetkit"
Documentation = "https://github.com/sherif69-sa/DevS69-sdetkit/tree/main/docs"
Issues = "https://github.com/sherif69-sa/DevS69-sdetkit/issues"
Changelog = "https://github.com/sherif69-sa/DevS69-sdetkit/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "build==1.2.2.post1",
  "mypy==1.17.1",
  "pre-commit==4.3.0",
  "ruff==0.12.10",
  "twine==6.1.0"
]
test = [
  "hypothesis",
  "pytest",
  "pytest-asyncio",
  "pytest-cov"
]
docs = [
  "mkdocs==1.6.1",
  "mkdocs-material==9.7.1"
]

[tool.setuptools]

[tool.setuptools.package-dir]
"" = "src"
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "sdetkit.__main__",
  "sdetkit.apiclient",
  "sdetkit.apiget",
  "sdetkit.cli",
  "sdetkit.netclient",
  "sdetkit.patch",
]
ignore_errors = true

[tool.mutmut]
paths_to_mutate = ["src/sdetkit"]
tests_dir = ["tests"]
runner = "PYTHONPATH=src pytest -q --ignore=mutants"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "network: allow real network access for this test",
]

[project.scripts]
sdetkit = "sdetkit.cli:main"
sdkit = "sdetkit.cli:main"
kvcli = "sdetkit._entrypoints:kvcli"
apigetcli = "sdetkit._entrypoints:apigetcli"
