[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdetkit"
version = "1.0.2"
requires-python = ">=3.11"
readme = "README.md"
description = "Operator-grade release confidence and test intelligence platform: deterministic gates, evidence, integration assurance, and failure forensics."
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["sdet", "testing", "qa", "automation", "cli", "devtools", "quality-gates"]
authors = [{ name = "DevS69 contributors" }]
maintainers = [{ name = "DevS69 maintainers" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities",
]
dependencies = [
  "httpx>=0.27,<1"
]
[project.urls]
Homepage = "https://github.com/sherif69-sa/DevS69-sdetkit"
Repository = "https://github.com/sherif69-sa/DevS69-sdetkit"
Documentation = "https://sherif69-sa.github.io/DevS69-sdetkit/"
Issues = "https://github.com/sherif69-sa/DevS69-sdetkit/issues"
Releases = "https://github.com/sherif69-sa/DevS69-sdetkit/releases"
Changelog = "https://github.com/sherif69-sa/DevS69-sdetkit/blob/main/CHANGELOG.md"
"Release Process" = "https://github.com/sherif69-sa/DevS69-sdetkit/blob/main/RELEASE.md"
"Trust and Support Policy" = "https://github.com/sherif69-sa/DevS69-sdetkit/blob/main/docs/versioning-and-support.md"

[project.optional-dependencies]
dev = [
  "build==1.4.0",
  "mypy==1.19.1",
  "pre-commit==4.5.1",
  "ruff==0.15.5",
  "twine==6.2.0"
]
test = [
  "hypothesis",
  "pytest",
  "pytest-asyncio",
  "pytest-cov"
]
docs = [
  "mkdocs==1.6.1",
  "mkdocs-material==9.7.5"
]
packaging = [
  "build==1.4.0",
  "check-wheel-contents==0.6.3",
  "twine==6.2.0"
]
telegram = [
  "python-telegram-bot>=21,<23"
]
whatsapp = [
  "twilio>=9,<10"
]

[tool.setuptools]

[tool.setuptools.package-dir]
"" = "src"
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "sdetkit.__main__",
  "sdetkit.apiclient",
  "sdetkit.apiget",
  "sdetkit.cli",
  "sdetkit.netclient",
  "sdetkit.patch",
]
ignore_errors = true

[tool.mutmut]
paths_to_mutate = ["src/sdetkit"]
tests_dir = ["tests"]
runner = "PYTHONPATH=src pytest -q --ignore=mutants"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not network'"
markers = [
  "network: allow real network access for this test",
]

[project.scripts]
sdetkit = "sdetkit.cli:main"
sdkit = "sdetkit.cli:main"
kvcli = "sdetkit._entrypoints:kvcli"
apigetcli = "sdetkit._entrypoints:apigetcli"

[project.entry-points."sdetkit.notify_adapters"]
stdout = "sdetkit.notify_plugins:stdout_adapter"
telegram = "sdetkit.notify_plugins:telegram_adapter"
whatsapp = "sdetkit.notify_plugins:whatsapp_adapter"

[project.entry-points."sdetkit.ops_tasks"]
